# Geometric-Modelling

MeshViewerCMake/: CMakeLists.txt  helperFunctions.h  main.cpp  myFace.cpp  myFace.h  myHalfedge.cpp  myHalfedge.h  myMesh.cpp  myMesh.h  myPoint3D.cpp  myPoint3D.h  myVector3D.cpp  myVector3D.h  myVertex.cpp  myVertex.h
